log

Wed 13 Mar 2024 08:39:41 PM UTC: 
 tests:  0|7
total_score: 0/70
4557eee
Wed 13 Mar 2024 08:47:50 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
54acbdd
Wed 13 Mar 2024 08:48:37 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
059ad0c
Wed 13 Mar 2024 08:53:16 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
58d7f69
Wed 13 Mar 2024 09:02:00 PM UTC: 
 exercises.c | 25 ++++++++++---------------
 1 file changed, 10 insertions(+), 15 deletions(-)
 tests:  0|6
total_score: 10/70
39884b3
Wed 13 Mar 2024 09:04:59 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
4be8e56
Wed 13 Mar 2024 09:18:47 PM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:51:23: error: statement with no effect [-Werror=unused-value]
   51 |   if (newArr == NULL) (EXIT_FAILURE);
      |                       ^
exercises.c:50:24: error: ‘newArr’ is used uninitialized [-Werror=uninitialized]
   50 |   int *newArr = (int *)realloc(newArr, *newSize * sizeof(int));
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9bf89a6
Wed 13 Mar 2024 09:19:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:51:23: error: statement with no effect [-Werror=unused-value]
   51 |   if (newArr == NULL) (EXIT_FAILURE);
      |                       ^
exercises.c:64:10: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   64 |   return cont;
      |          ^~~~
exercises.c:50:24: error: ‘newArr’ is used uninitialized [-Werror=uninitialized]
   50 |   int *newArr = (int *)realloc(newArr, *newSize * sizeof(int));
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
de352cb
Wed 13 Mar 2024 09:20:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:63:10: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   63 |   return cont;
      |          ^~~~
exercises.c:50:24: error: ‘newArr’ is used uninitialized [-Werror=uninitialized]
   50 |   int *newArr = (int *)realloc(newArr, *newSize * sizeof(int));
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ddba870
Wed 13 Mar 2024 09:21:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
test.c: In function ‘filterEvenNumbers’:
exercises.c:50:24: error: ‘newArr’ is used uninitialized [-Werror=uninitialized]
   50 |   int *newArr = (int *)realloc(newArr, *newSize * sizeof(int));
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8cc7b54
Thu 14 Mar 2024 09:36:47 PM UTC: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:50:62: error: expected statement before ‘)’ token
   50 |   int *newArr = (int *)realloc(NULL, *newSize * sizeof(int));)
      |                                                              ^
Compilation failed
7518163
